syntax = "proto3";

package Proto.Notification.Sprints;

service NotificationService {
  rpc SendSprintActiveStatusSet(SprintActiveStatusSetNotificationProto) returns (NotificationResponse);
  rpc SendSprintCreated(SprintCreatedNotificationProto) returns (NotificationResponse);
  rpc SendSprintDataUpdated(SprintDataUpdatedNotificationProto) returns (NotificationResponse);
  rpc SendTicketAddedToActiveSprint(TicketAddedToActiveSprintNotificationProto) returns (NotificationResponse);
  rpc SendTicketAddedToSprint(TicketAddedToSprintNotificationProto) returns (NotificationResponse);
}

message SprintActiveStatusSetNotificationProto {
  string sprintId = 1;
  bool isActive = 2;
}

message SprintCreatedNotificationProto {
  string sprintId = 1;
  string name = 2;
  string startTime = 3; // ISO8601 string
  string endTime = 4;   // ISO8601 string
  bool isActive = 5;
  repeated string ticketIds = 6;
}

message SprintDataUpdatedNotificationProto {
  string sprintId = 1;
  string name = 2;
  string startTime = 3;
  string endTime = 4;
}

message TicketAddedToActiveSprintNotificationProto {
  // Empty message - no fields
}

message TicketAddedToSprintNotificationProto {
  string sprintId = 1;
  string ticketId = 2;
}

message NotificationResponse {
  bool success = 1;
}
